# lightup-game

./: .gitignore  CMakeLists.txt  README.md  game_examples.c  game_examples.h  game_ext.c  game_ext.h  game_private.h  game_sdl.c  game_solve.c  game_test.c  game_test.h  game_test_aux.c  game_test_files.c  game_test_v1.c  game_test_v2.c  game_text.c  model.c  model.h
android/: AndroidManifest.xml  README.md  download-cremi.sh
android/jni/src/: Android.mk  game.c  game.h  game_aux.c  game_aux.h  game_private.c  game_sdl.c  game_tools.c  game_tools.h  model.c  model.h  queue.c
web/: Makefile  demo.css  demo.html  demo.js  game.html  game.js  game.wasm  wrapper.c
web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.c  game_ext.h  game_private.c  game_private.h  queue.c  queue.h
